Update and rename #1index.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         
         <body>
         
-            <a href="JJSploit_Setup_6.4.0.exe" download="JJSploit"> Download Executor
+            <a href="JJSploit_Setup_6.4.0.exe" download="JJSploit"> Download Executor</a>
         </body>
 </html>
