--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
             
            <a href="jjsplot logo.png" download="jjsploit logo"><img src = "jjsploit logo.png" alt=thumbnail" width="120"/></a>
                
-            <a href="JJSploit_Setup_6.4.0.exe" download="JJSploit"> Download Executor</a>
+            <a href="OXY_Installer.exe" download="OxyhenU"> Download Executor</a>
         </body>
 </html>
