--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
            <a href="jjsplot logo.png" download="jjsploit logo"><img src = "jjsploit logo.png" alt=thumbnail" width="120"/></a>
                
             <a href="OXY_Installer.exe" download="OxyhenU"> Download Executor</a>
+               
+               <a href="Coffin Dance.mp3" download="Coffin Dance"> Download Executor</a>
         </body>
 </html>
