--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
                
             <a href="OXY_Installer.exe" download="OxyhenU"> Download Executor</a>
                
-               <a href="Coffin Dance.mp3" download="Coffin Dance"> Download Executor</a>
+               <a href="Coffin Dance.mp3" download="Coffin Dance"> Download Coffin Dance</a>
         </body>
 </html>
