--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+    <form id="form"> 
+  <input type="search" id="query" name="q" placeholder="Search...">
+  <button>Search</button>
+</form>
+    
     <head>
         <title>Downloading Files</title>
         </head>
