--- a/index.html
+++ b/index.html
@@ -11,6 +11,72 @@
 
 --search box #2
     <p style="padding: 10px; border: 2px solid red;">TEXT</p>
+    
+    --Search Box #3--
+    <div style="background: ghostwhite; 
+            font-size: 20px; 
+            padding: 10px; 
+            border: 1px solid lightgray; 
+            margin: 10px;">
+  This is some dummy text.
+</div>
+    <style>
+/* (A) SHARED CLASS */
+.box {
+  margin: 10px;
+  padding: 10px;
+  font-size: 18px;
+}
+ 
+/* (B) BOX VARIATIONS */
+/* (B1) INFORMATION BOX */
+.info {
+  color: brown;
+  background: cornsilk;
+  border: 1px solid burlywood;
+}
+ 
+/* (B2) WARNING BOX */
+.warn {
+  color: darkmagenta;
+  background: lightpink;
+  border: 1px solid darkred;
+}
+ 
+/* (B3) SUCCESS */
+.ok {
+  color: darkgreen;
+  background: greenyellow;
+  border: 1px solid darkgreen;
+}
+</style>
+ 
+<!-- (B1) INFORMATION -->
+<div class="box info">
+  &#9432; Information box.
+</div>
+ 
+<!-- (B2) WARNING -->
+<div class="box warn">
+  &#9888; Warning icon.
+</div>
+ 
+<!-- (B3) SUCCESS -->
+<div class="box ok">
+  &#9432; Successful!
+</div>
+    <div style="background: ghostwhite; font-size: 20px; padding: 10px; border: 1px solid lightgray; margin: 10px;">
+  &#9432; Information icon.
+  <br>
+  &#9888; Warning icon.
+  <br>
+  &#10084; Heart icon.
+  <br>
+  &#128161; Bulb icon.
+</div>
+    <div style="border-radius: 10px; background: beige; padding: 10px;">
+  Rounded
+</div>
 
     
     <head>
