--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-div { background-color: #7B68EE; }
-
 <html>
     -- Search Box-- 
     <form role="search" id="form">
@@ -79,6 +77,9 @@ div { background-color: #7B68EE; }
     <div style="border-radius: 10px; background: beige; padding: 10px;">
   Rounded
 </div>
+    
+    --background color--
+    div { background-color: #7B68EE; }
 
     
     <head>
