--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
 </div>
     
     --background color--
-    div { background-color: #7B68EE; }
-
+    div { background-color: slateblue; }
     
     <head>
         <title>Downloading Files</title>
