--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             padding: 10px; 
             border: 1px solid lightgray; 
             margin: 10px;">
-  This is some dummy text.
+   <a href="/">Home</a>
 </div>
     <style>
 /* (A) SHARED CLASS */
