--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p style="padding: 10px; border: 2px solid red;">TEXT</p>
     
     --Search Box #3--
-    <div style="background: ghostwhite; 
+    <div style="background: MediumPurple; 
             font-size: 20px; 
             padding: 10px; 
             border: 1px solid lightgray; 
