--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title>HTML Backgorund Color</title> </head> <body style="background-color:grey;"> <h1>Products</h1> <p>We have developed more than 10 products till now.</p> </body> </html><html>
+<head> <title>HTML Backgorund Color</title> </head> <body style="background-color:green;"> <h1>Products</h1> <p>We have developed more than 10 products till now.</p> </body> </html><html>
     -- Search Box-- 
     <form role="search" id="form">
   <input type="search" id="query" name="q"
