--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> <title>HTML Backgorund Color</title> </head> <body style="background-color:LightSeaGreen;"> <h1>Products</h1> <p>We have developed more than 10 products till now.</p> </body> </html><html>
-    -- Search Box-- 
+    <!-- Search Box --> 
     <form role="search" id="form">
   <input type="search" id="query" name="q"
    placeholder="Search..."
