--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <p style="padding: 10px; border: 2px solid red;">TEXT</p>
     
     --Search Box #3--
+    <div style="margin-left: 25%">
+Text input here
+</div>
+
     <div style="background: MediumPurple;
             color: white; 
             font-size: 20px; 
