--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ html>
   </button>
 </form>
 
---search box #2
+    <!-- Search Box #2--> 
     <p style="padding: 10px; border: 2px solid red;">TEXT</p>
     
-    --Search Box #3--
+    <!-- Search Box #3--> 
     <div style="margin-left: 25%">
 Text input here
 </div>
