--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 <!DOCTYPE html>
+<ol id="search-results"></ol>
+<script>
+    window.pages = {
+        {% for page in site.pages %}
+            "{{ page.url | slugify }}": {
+                "title": "{{ page.title | xml_escape }}",
+                "content": {{ page.content | markdownify | strip_newlines | strip_html | jsonify }},
+                "url": "{{ site.url | append: page.url | xml_escape }}",
+                "path": "{{ page.url | xml_escape }}"
+            }{% unless forloop.last %},{% endunless %}
+        {% endfor %}
+    };
+</script>
+<script src="/lunr-2.3.5.min.js"></script>
+<script src="/search.js"></script>
+
+
+
+
+
+
 <html>
   <head>
     <title>Awesome Search Box</title>
