--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
 <!DOCTYPE html>
+<form id="form1" runat="server">
+       <div>
+           <table>
+               <tr>
+                   <td>Enter Service Number
+                   </td>
+                   <td>
+                       <input type="text" align="left">
+                   </td>
+               </tr>
+           </table>
+
+       </div>
+   </form>
+
+
+
+
+
+
+
+
 <html>
 <head>
 <title>Search Box Example 1</title
