--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
+<input type='text' placeholder='Search...' id='search-text-input' />
+<div id='button-holder'>
+    <img src='magnifying_glass.png' />
+</div>
+
+
+
+
+
+
+
+
+
 <form id="form1" runat="server">
        <div>
            <table>
