--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <input type='text' placeholder='Search...' id='search-text-input' />
 <div id='button-holder'>
-    <img src='magnifying_glass.png' />
+    <img src='magnifying_glass.png' /> <!-- Remember to add mangnifying glass image, when done detele this message --> 
 </div>
 <style>
 #search-text-input{
