--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<script async src="https://cse.google.com/cse.js?cx=94c3c9290c94cd52b"></script>
+<div class="gcse-search"></div>
+
+
+
+
 <input type='text' placeholder='Search...' id='search-text-input' />
 <div id='button-holder'>
     <img src='magnifying_glass.png' /> <!-- Remember to add mangnifying glass image, when done detele this message --> 
