--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <title>Title of the document</title>
+    <style>
+      body {
+        background-color: #8ebf42;
+      }
+      form {
+        width: 400px;
+        margin: auto;
+        margin-top: 250px;
+      }
+      input {
+        padding: 4px 10px;
+        border: 0;
+        font-size: 16px;
+      }
+      .search {
+        width: 75%;
+      }
+      .submit {
+
+
+
+
+
+
+
 <script async src="https://cse.google.com/cse.js?cx=94c3c9290c94cd52b"></script>
 <div class="gcse-search"></div>
 
