--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
         width: 75%;
       }
       .submit {
+        width: 70px;
+        background-color: #1c87c9;
+        color: #ffffff;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>Create search boxes</h2>
+    <form action="/form/submit" method="GET">
+      <input type="text" name="text" class="search" placeholder="Search here!">
+      <input type="submit" name="submit" class="submit" value="Search">
+    </form>
+  </body>
+</html>
+
 
 
 
