--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@ Text input here
 </div>
 
     <div style="background: MediumPurple;
-            color: white; 
+            top:25%;
+left:25%;
+                color: white; 
             font-size: 20px; 
             padding: 10px; 
             border: 1px solid lightgray; 
