--- a/index.html
+++ b/index.html
@@ -219,12 +219,16 @@ Text input here
     <div style="background: MediumPurple;
             top:25%;
 left:25%;
-                color: white; 
+                color: white;
+                float: right;
             font-size: 20px; 
             padding: 10px; 
             border: 1px solid lightgray; 
             margin: 10px;">
    <a href="/">Home</a>
+      
+
+      
 </div>
     <style>
 /* (A) SHARED CLASS */
