--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@ Text input here
     <div style="background: MediumPurple;
             top:25%;
 left:25%;
-                color: white;
-                float: right;
+            <BODY TEXT="RED">
+            float: right;
             font-size: 20px; 
             padding: 10px; 
             border: 1px solid lightgray; 
