--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ left:25%;
             font-size: 20px; 
             padding: 10px; 
             border: 1px solid lightgray; 
-            margin: 10px;">
+            <margin: 10px;">
    <a href="/">Home</a>
       
 
