--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ left:25%;
             <BODY TEXT="RED">
             float: right;
             font-size: 20px; 
-            padding: 10px; 
+            <padding: 10px;"> 
             border: 1px solid lightgray; 
             <margin: 10px;">
    <a href="/">Home</a>
