--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@ Text input here
     <div style="background: MediumPurple;
             top:25%;
 left:25%;
-            <BODY TEXT="RED">
+            <FONT COLOR="RED">
             float: right;
             font-size: 20px; 
             <padding: 10px;"> 
-            border: 1px solid lightgray; 
+            <border: 1px solid lightgray;> 
             <margin: 10px;">
    <a href="/">Home</a>
       
