--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@ Text input here
 </div>
 
     <div style="background: MediumPurple;
+    <div style="background: ghostwhite; font-size: 20px; padding: 10px; border: 1px solid lightgray; margin: 10px;">
     <FONT COLOR="RED">
      float: right;
      font-size: 20px; 
