--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ html>
 </form>
 
     <!-- Search Box #2--> 
-    <p style="padding: 10px; border: 2px solid red;">TEXT</p>
+    <p style="padding: 10px; border: 2px red;">TEXT</p>
     
     <!-- Search Box #3--> 
     <div style="margin-left: 25%">
