--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ Text input here
 
     <div style="background: MediumPurple;
     <div style="background: ghostwhite; font-size: 20px; padding: 10px; border: 1px solid lightgray; margin: 10px;">
-    <FONT COLOR="RED">
+    <FONT COLOR="white">
      float: right;
      font-size: 20px; 
      <padding: 10px;"> 
