--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
+<input aria-invalid="false" autocomplete="off" id="searchbar-input-autocomplete" placeholder="Search for songs, artists, lyrics...." type="text" class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedStart" aria-autocomplete="list" autocapitalize="none" spellcheck="false" value="">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <html>
   <head>
     <title>Title of the document</title>
