--- a/index.html
+++ b/index.html
@@ -319,6 +319,6 @@ Text input here
                
            <a href="Coffin Dance.mp3" download="Coffin Dance"> Download Coffin Dance</a>
                
-           <a href="Among Us Drip Theme Song Original Among Us Trap Remix Amogus Meme Music.mp3" download="Among Us Drip Theme Song Original Among Us Trap Remix Amogus Meme Music"> Download Among Us Drip Theme Song #1</a>
+           <a href="Among us.mp3" download="Among Us Drip Theme Song #1"> Download Among Us Drip Theme Song #1</a>
         </body>
 </html>
