--- a/index.html
+++ b/index.html
@@ -240,6 +240,14 @@ Text input here
      <padding: 10px;"> 
      <border: 1px solid lightgray;> 
      <margin: 10px;">
+                    <html>
+<body>
+
+<h1 style="color:blue;"><a href="/">Home</a>
+<p style="color:red;"><a href="/">Home</a>
+
+</body>
+</html>
    <a href="/">Home</a>
       
 
