--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@ Text input here
      <padding: 10px;"> 
      <border: 1px solid lightgray;> 
      <margin: 10px;">
-    <h1 style="color:blue;"><a href="/">Home</a>
-    <p style="color:red;"><a href="/">Home</a>
+    <h1 style="color:white;"><a href="/">Home</a>
+    <p style="color:white;"><a href="/">Home</a>
 
 
    <!-- Remember to enable after testing lines 243 and 244 -->  <a href="/">Home</a> <!-- Remember to enable after testing lines 243 and 244 --> 
