--- a/index.html
+++ b/index.html
@@ -231,6 +231,14 @@ html>
     <div style="margin-left: 25%">
 Text input here
 </div>
+  
+  
+  
+  color: darkmagenta;
+  background: lightpink;
+  border: 1px solid darkred;
+  
+  
 
     <div style="background: MediumPurple;
     <div style="background: ghostwhite; font-size: 20px; padding: 10px; border: 1px solid lightgray; margin: 10px;">
