--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<form id="search-projects-form" class="central" method="get" action="https://launchpad.net/projects">
+<form id="search-projects-form" class="central" method="get" action="https://baldbuffalo.github.io/MY-WEBSITE/">
         <input type="text" name="text" size="50">
         <input type="submit" name="search" value="Find a Project">
       </form>
