--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<script src="https://happygamer1450.github.io/Ruffle-Embedded/ruffle/ruffle.js"></script>
+<div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
+        <embed height="480" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="StickWar.swf" type="application/x-shockwave-flash" width="620"></embed>
+</div>
+
+
+
 <form id="search-projects-form" class="central" method="get" action="https://baldbuffalo.github.io/MY-WEBSITE/">
         <input type="text" name="text" size="50">
         <input type="submit" name="search" value="Find a Project">
