--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+
+<script src="path/to/ruffle/ruffle.js"></script>
+
 <script src="https://happygamer1450.github.io/Ruffle-Embedded/ruffle/ruffle.js"></script>
 <div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
         <embed height="480" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="StickWar.swf" type="application/x-shockwave-flash" width="620"></embed>
