--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+javascript: addEventListener('click', function(ev) {var el = ev.target, rfs = el.requestFullScreen || el.webkitRequestFullScreen || el.mozRequestFullScreen; rfs.call(el);});
 
 
 <script src="path/to/ruffle/ruffle.js"></script>
