--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 javascript: addEventListener('click', function(ev) {var el = ev.target, rfs = el.requestFullScreen || el.webkitRequestFullScreen || el.mozRequestFullScreen; rfs.call(el);});
 
+<script src="https://happygamer1450.github.io/Ruffle-Embedded/ruffle/ruffle.js"></script>
+<div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
+        <embed height="480" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="CubeField.swf" type="application/x-shockwave-flash" width="620"></embed>
+</div>
 
 <script src="path/to/ruffle/ruffle.js"></script>
 
